--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-:root {
-  --color-primary: #2931F4;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-* {
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+*:focus{
+  outline: 0;
 }
 
-html, body {
-    background-color: #F5F8FF;
+html, body, #root{
+  height: 100%;
 }
 
-a, a:hover {
+body{
+  font: 14px 'Roboto', sans-serif;
+  background-color: #efefef;
+}
+
+a{
   text-decoration: none;
-  color: unset;
+}
+
+ul{
+  list-style: none;
+}
+
+button{
+  cursor: pointer;
 }
