Frase e Id registrados

--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,10 @@
 }
 
 html, body {
-    background-color: #F5F8FF;
+    background-color: #e4e7ec;
 }
 
-a, a:hover {
+/* a, a:hover {
   text-decoration: none;
   color: unset;
-}
+} */
