--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ html, body {
     background-color: #e4e7ec;
 }
 
-/* a, a:hover {
+a, a:hover {
   text-decoration: none;
   color: unset;
-} */
+}
