--- a/src/Pages/InputData/styles.css
+++ b/src/Pages/InputData/styles.css
@@ -29,7 +29,7 @@
 .input-frase{
     background-color: rgb(246, 243, 240);
     border-width: 0px;
-    box-shadow: 2px 2px 5px;
+    box-shadow: 3px 3px 10px;
     border-radius: 4px;
 }
 
@@ -39,6 +39,13 @@
     height: 30px;
     border-radius: 3px;
     border-width: 0px;
-    background-color: rgb(16, 46, 136);
+    background-color: #711DF4;
+    box-shadow: 2px 2px 5px #000;
     color: #fff;
+}
+
+.inputData-button:hover{
+    color: #000;
+    font-weight: bold;
+    box-shadow: 2px 2px 5px rgb(58, 49, 49);
 }
