--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -55,15 +55,15 @@
 .titulo-direito{
     width: 300px;
     height: 20px;
-    margin-top: 18px;
-    padding-left: 140px;
+    margin-top: 13px;
+    padding-left: 203px;
 }
 
 .frase-input{
-    width: 200px;
-    height: 2.5em;
+    width: 170px;
+    height: 2.3em;
     border-radius: 4px;
-    border: 1px solid rgb(170, 158, 158);
-    box-shadow: 2px 2px 5px -2px;
+    border: 1px solid rgb(170, 158, 158, 0.7);
+    box-shadow: 0 4px 20px rgb(0, 0, 0, 0.15);
     padding: 5px 10px;
 }
