--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -28,7 +28,7 @@
 .frase-container{
     background-color: #fff;
     box-shadow: 0 4px 20px rgb(0 0 0 / 25%);
-    border-radius: 10px;
+    border-radius: 6px;
     height: 85%;
     padding: 15px;
     cursor: pointer;
@@ -40,6 +40,16 @@
     top: -30px;
     left: 15px;
     /* background-color: aqua; */
+}
+
+.btn-copiar{
+    width: 68px;
+    margin-left: 20px;
+}
+
+.btn-editar{
+    width: 68px;
+    margin-left: 20px;
 }
 
 .textarea-container{
@@ -56,7 +66,7 @@
     width: 300px;
     height: 20px;
     margin-top: 13px;
-    padding-left: 203px;
+    padding-left: 192px;
 }
 
 .frase-input{
