--- a/src/Pages/InputData/styles.css
+++ b/src/Pages/InputData/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --sombra: 1px 3px 5px rgba(1255, 255, 255, 0.2);
+}
+
 .inputData-container{
     display: flex;
     flex-direction: column;
@@ -17,19 +21,24 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.inputData-form{
+    display: flex;
+    flex-direction: column;
+}
+
 .inputData-input{
     width: 200px;
     height: 2.2em;
     border-radius: 4px;
     border-width: 0px;
-    box-shadow: 2px 2px 5px;
+    box-shadow: var(--sombra);
     padding: 5px 10px;
 }
 
 .input-frase{
     background-color: rgb(246, 243, 240);
     border-width: 0px;
-    box-shadow: 3px 3px 10px;
+    box-shadow: var(--sombra);
     border-radius: 4px;
 }
 
@@ -40,12 +49,12 @@
     border-radius: 3px;
     border-width: 0px;
     background-color: #f3f0f8;
-    box-shadow: 2px 2px 5px #000;
+    box-shadow: var(--sombra);
     color: rgb(0, 0, 0);
 }
 
 .inputData-button:hover{
     color: rgb(51, 7, 197);
     
-    box-shadow: 2px 4px 7px #000;
+    box-shadow: var(--sombra);
 }
